Fix layout on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,7 @@ html {
 
 body {
 	overscroll-behavior-y: none;
+	@apply w-screen;
 }
 
 nav .logo svg {
